bug-fix-about-app: fixed layout issue for responsive screen

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -462,6 +462,7 @@ h6 {
 }
 
 @media (max-width: 992px) {
+    .product-container,
     .contact-container {
         padding-top: 75px;
     }
